--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src//assets//Images/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ===== font link ===== -->
     <link
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite + React</title>
+    <title>Web XV Website</title>
   </head>
   <body>
     <div id="root"></div>
